  with a block size other than 64 bytes (such as sha384 and sha512).

- Issue829951: In the smtplib module, SMTP.starttls() now complies with 
  RFC 3207 and forgets any knowledge obtained from the server not obtained
  from the TLS negotiation itself.  Patch contributed by Bill Fenner.


Extension Modules
-----------------

- Fix a potential 'SystemError: NULL result without error' in _ctypes.

- Prevent a segfault when a ctypes NULL function pointer is called.

- Bug #1301: Bad assert in _tkinter fixed.

- Patch #1114: fix curses module compilation on 64-bit AIX, & possibly
  other 64-bit LP64 platforms where attr_t is not the same size as a long.  
  (Contributed by Luke Mewburn.)

- Bug #1649098: Avoid declaration of zero-sized array declaration in
  structure.

- Bug #1703286: ctypes no longer truncates 64-bit pointers.

- Bug #1721309: prevent bsddb module from freeing random memory.

- Bug #1233: fix bsddb.dbshelve.DBShelf append method to work as
  intended for RECNO databases.

- Bug #1726026: Correct the field names of WIN32_FIND_DATAA and
  WIN32_FIND_DATAW structures in the ctypes.wintypes module.

- Added support for linking the bsddb module against BerkeleyDB 4.6.x.

- Fix libffi configure for hppa*-*-linux* | parisc*-*-linux*.

- Build using system ffi library on arm*-linux*.

- Bug #1372: zlibmodule.c: int overflow in PyZlib_decompress


Documentation
-------------

- Bug #1637365: add subsection about "__name__ == __main__" to the
  Python tutorial.

- Bug #1569057: Document that calling file.next() on a file open for writing
  has undefined behaviour.  Backport of r54712.

Build
-----

- Bug #1699: Define _BSD_SOURCE only on OpenBSD.

- Bug #1608: use -fwrapv when GCC supports it.  This is important,
  newer GCC versions may optimize away overflow buffer overflow checks
  without this option!

- Allow simultaneous installation of 32-bit and 64-bit versions
  on 64-bit Windows systems.
